made portfolio section into flex box to correct alignment issues

--- a/css/style.css
+++ b/css/style.css
@@ -420,6 +420,8 @@ section h1 {
     width: 90%;
     max-width: 1480px;
     margin: 0 auto;
+    display: flex;
+    flex-flow: row wrap;
 }
 
 .project {
